# ElectrodeLocalizationKit

./: .coverage  .gitignore  Makefile  README.md  elk.cmd  elk.command  label_dialog.py  main.py  pyLocalizer.py  pyLocalizerX.py  pyloc_main_window.py  pyproject.toml  requirements.txt
archive/: cap_model_legacy.py
callbacks/: display.py  fileio.py
config/: colors.py  electrode_detector.py  electrode_labeling.py  mappings.py
core/: cap_model.py  capmodel.py  electrode.py  head_models.py  session.py
data/: data_loader.py  exporter.py  loader.py
data_models/: cap_model.py  electrode.py  head_models.py  session.py
docs/: WINDOWS_SETUP.md  folder_hierarchy.txt
fileio/: locations.py  mri.py  scan.py
model/: cap_model.py  electrode.py  head_models.py  session.py
processing/: electrode_aligner.py  electrode_detector.py  electrode_registrator.py  surface_registrator.py
processing_handlers/: labeling.py  scan_mri_alignment.py
processing_models/: electrode_detector.py  electrode_registrator.py  surface_registrator.py
processor/: electrode_aligner.py  electrode_detector.py  electrode_registrator.py  surface_registrator.py
sample_data/: bem_outer_skin_surface.gii  electrode_locations.ced
src/: main.py
src/config/: electrode_labeling.py  logger_config.py  (+2 more)
test/: dog_processing.py  test_electrode.py  test_mri.py  test_table_input.py  test_too_close_electrodes.py
ui/: pyloc_main_window.py  state_machine.py  style_blue.css  surface_view.py  test_state_machine.py
utils/: mesh.py  spatial.py  spatial_processing.py  texture_processing.py  warnings.py
view/: interactive_surface_view.py  labeling_surface_view.py  surface_view.py
(+93 files in other folders)
