[project]
name = "electrodelocalizationkit"
version = "0.3.1"
description = "A tool for rapid EEG electrode localization using IR stereo cameras or MRI."
readme = "README.md"
requires-python = ">=3.11, <3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
