[project]
name = "electrode-localization-kit"
version = "0.8.0"
description = "A tool for rapid EEG electrode localization using IR stereo cameras or MRI."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E"]
requires-python = "==3.11.*"

dependencies = [
    "vtk==9.2.6",
    "PyQt6==6.7.0",
    "numpy==1.25.0",
    "pandas==2.2.2",
    "scipy==1.15.3",
    "nibabel==5.2.1",
    "vedo==2023.4.6",
    "PyQt6_sip==13.6.0",
    "scikit_learn==1.7.1",
    "scikit_image==0.25.2",
    "opencv_python==4.8.1.78",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
